added some css to make it look a bit prettier

--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 <title></title>
 </head>
 <body>
-    <h1>Calculator</h1>
+    <h1 style="text-align: center;">Calculator</h1>
     <div id="display"></div>
     <div class="container"></div>
     <button value=1>1</button>
     <button value=2>2</button>
     <button value=3>3</button>
-    <button value="*">x</button><br>
+    <button class="operator" value="*">x</button><br>
     <button value=4>4</button>
     <button value=5>5</button>
     <button value=6>6</button>
-    <button value="+">+</button><br>
+    <button class="operator" value="+">+</button><br>
     <button value=7>7</button>
     <button value=8>8</button>
     <button value=9>9</button>
-    <button value="/">/</button><br>
+    <button class="operator" value="/">÷</button><br>
     <button value=0>0</button>
-    <button id="clear">C</button>
-    <button id="submit">=</button>
-    <button value="-">-</button>
+    <button class="operator" id="clear">c</button>
+    <button class="operator" id="submit">=</button>
+    <button class="operator" value="-">-</button>
 
    
 
