--- a/index.html
+++ b/index.html
@@ -1,37 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width">
-<title></title>
-<link href="style.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="index.js" defer></script>
-<title></title>
-</head>
-<body>
-    <h1 style="text-align: center;">Calculator</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title></title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="index.js" defer></script>
+    <title></title>
+  </head>
+  <body>
+    <h1 style="text-align: center">Calculator</h1>
     <div id="display"></div>
     <div class="container"></div>
-    <button value=1>1</button>
-    <button value=2>2</button>
-    <button value=3>3</button>
-    <button class="operator" value="*">x</button><br>
-    <button value=4>4</button>
-    <button value=5>5</button>
-    <button value=6>6</button>
-    <button class="operator" value="+">+</button><br>
-    <button value=7>7</button>
-    <button value=8>8</button>
-    <button value=9>9</button>
-    <button class="operator" value="/">÷</button><br>
-    <button value=0>0</button>
+    <button value="1">1</button>
+    <button value="2">2</button>
+    <button value="3">3</button>
+    <button class="operator" value="*">x</button><br />
+    <button value="4">4</button>
+    <button value="5">5</button>
+    <button value="6">6</button>
+    <button class="operator" value="+">+</button><br />
+    <button value="7">7</button>
+    <button value="8">8</button>
+    <button value="9">9</button>
+    <button class="operator" value="/">÷</button><br />
+    <button value="0">0</button>
     <button class="operator" id="clear">c</button>
     <button class="operator" id="submit">=</button>
     <button class="operator" value="-">-</button>
-
-   
-
-
-
-</body>
+  </body>
 </html>
